gitops-k8sbootstrap/devopstools/gogs/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs
  labels:
    app: gogs
spec:
  ports:
  - port: 880
    name: http
  selector:
    app: helloworld
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: helloworld-ingress
spec:
  rules:
    - host: "gogs.eqsleaarning.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: helloworld
              servicePort: 5000
