gitops-k8sbootstrap/devopstools/gogs/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "gogs.eqslearning.com"
  gateways:
  - gogs-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8000
        host: repo-gogs
